--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "slim/twig-view": "^2.4",
-        "delight-im/auth": "^8.1"
+        "delight-im/auth": "^8.1",
+        "slim/flash": "^0.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
