--- a/webpack/package.json
+++ b/webpack/package.json
@@ -53,8 +53,10 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bxslider": "^4.2.14",
-    "jquery": "^3.3.1",
+    "ckeditor": "^4.11.4",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.10",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "slugify": "^1.3.4"
   }
 }
