--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "monolog/monolog": "^1.17",
         "slim/twig-view": "^2.4",
         "delight-im/auth": "^8.1",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "respect/validation": "^1.1",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
