--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "delight-im/auth": "^8.1",
         "slim/flash": "^0.4.0",
         "respect/validation": "^1.1",
-        "intervention/image": "^2.4"
+        "intervention/image": "^2.4",
+        "bryanjhv/slim-session": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
